# longest-word

./: pyproject.toml
.github/workflows/: .python-ci.yml
longest_word/: game.py
tests/: test_game.py
