[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Enrico Dainelli <enrico_mail@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
pylint = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
